--- a/.github/workflows/douban.yml
+++ b/.github/workflows/douban.yml
@@ -21,5 +21,5 @@ jobs:
       run: npm install
 
     - name: Run your Node.js script
-      run: NOTION_TOKEN="${{secrets.NOTION_TOKEN}}" DATABASE_ID="${{secrets.DATABASE_ID}}" DB_BLOCK_LIST="${{secrets.DB_BLOCK_LIST}}" node ./src/scripts/douban.js
+      run: DB_UID="${{secrets.DB_UID}}" NOTION_TOKEN="${{secrets.NOTION_TOKEN}}" DATABASE_ID="${{secrets.DATABASE_ID}}" DB_BLOCK_LIST="${{secrets.DB_BLOCK_LIST}}" node ./src/scripts/douban.js
 
