--- a/.github/workflows/weread.yml
+++ b/.github/workflows/weread.yml
@@ -22,5 +22,5 @@ jobs:
       run: npm install
 
     - name: Run your Node.js script
-      run: WEREAD_COOKIE="${{secrets.WEREAD_COOKIE}}" NOTION_TOKEN="${{secrets.NOTION_TOKEN}}" DATABASE_ID="${{secrets.DATABASE_ID_READ}}" node ./src/scripts/douban.js
+      run: WEREAD_COOKIE="${{secrets.WEREAD_COOKIE}}" NOTION_TOKEN="${{secrets.NOTION_TOKEN}}" DATABASE_ID="${{secrets.DATABASE_ID_READ}}" node ./src/scripts/weread.js
 
